--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -2,11 +2,19 @@
     .top-nav-link {
         font-size: 1.5vw;
     }
+
+    .top-nav {
+        flex-basis: 58.75%;
+    }
 }
 
 @media (max-width: 599px) {
     .top-nav-link {
         font-size: 2.5vw;
+    }
+
+    .top-nav {
+        flex-basis: 80%;
     }
 }
 
@@ -14,9 +22,7 @@
     display: flex;
     flex-direction: row;
     flex-shrink: 0;
-    flex-basis: 58.75%;
 }
-
 
 .top-nav > h1 {
     margin: 0 0 0;
